crates/aranya-policy-compiler/tests/data/type_errors/if_cond_not_bool_invalid_type_2.fail.policy
function foo(x int) bool {
    if 3 {
    }
}
